# cbscript

./: .pre-commit-config.yaml  pyproject.toml
Scripts/mtg/: cards.py
src/cbscript/: CompileError.py  __init__.py  cb_script.py  compile.py  environment.py  global_context.py  mcfunction.py  mcworld.py  scratch_tracker.py  scriptlex.py  scriptparse.py  selector_definition.py  source_file.py  tellraw.py
src/cbscript/block_types/: advancement_definition_block.py  array_definition_block.py  block_base.py  block_definition_block.py  block_id_switch_block.py  block_switch_base.py  block_switch_block.py  block_tag_block.py  call_block_base.py  clock_section.py  command_block.py  comment_block.py  create_block.py  entity_tag_block.py  execute_base.py  execute_block.py  for_index_block.py  for_selector_block.py  function_call_block.py  function_section.py  import_block.py  item_modifier_definition_block.py  item_tag_block.py  loot_table_definition_block.py  macro_call_block.py  macro_section.py  method_call_block.py  move_block.py  nbt_data_block.py  nbt_remove_block.py  pointer_decl_block.py  pop_block.py  predicate_definition_block.py  print_block.py  push_block.py  python_assignment_block.py  python_for_block.py  python_if_block.py  python_import_block.py  python_tuple_assignment_block.py  (+16 more)
src/cbscript/cbscript.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/cbscript/data_types/: block_case.py  const_number.py  const_string.py  interpreted_python.py  number_macro_path.py  python_identifier.py  relcoord.py  relcoord_vector.py  relcoords.py  shaped_recipe.py
src/cbscript/nbt_types/: block_nbt_path.py  entity_nbt_path.py  nbt_json.py  storage_nbt_path.py
src/cbscript/scalar_expressions/: binop_expr.py  create_expr.py  dot_expr.py  func_expr.py  (+3 more)
unittest/: mock_block.py  mock_environment.py  mock_global_context.py  mock_mcfunction.py  mock_mcworld.py  mock_parsed.py  mock_selector_definition.py  mock_source_file.py  unit_test.py
(+18 files in other folders)
