[build-system]
requires = ["setuptools >= 64"]
build-backend = "setuptools.build_meta"

[project]
name = "cbscript"
version = "0.0.0"
authors = [
  { name="SethBling", email="sethbling@gmail.com" },
]
description = "CBScript for Minecraft"
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
requires-python = ">=3.11"
dependencies = [
    "ply",
    "pyyaml",
]

[project.urls]
"Source" = "https://github.com/SethBling/cbscript"
"Bug Tracker" = "https://github.com/SethBling/cbscript/issues"

[project.scripts]
cbcompile = "cbscript.compile:cli_run"


[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff]
line-length = 79
fix = true

include = ["*.py", "*.pyi", "**/pyproject.toml"]

[tool.ruff.lint]
select = [
    "E",     # Error
    "I",     # isort
    "RUF",   # Ruff-specific rules
    "UP",    # pyupgrade
    "W",     # Warning
]
ignore = [
    "W191",  # Indentation contains tabs
    "E501",
    "E101",
]
